Fixed Mantis bug #5131: In Kiosk mode with displayed Test title, the title is not visible when the Liste of Questions is viewed
git-svn-id: http://svn.ilias.de/svn/ilias/trunk@21502 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/Modules/Test/templates/default/ta.css
+++ b/Modules/Test/templates/default/ta.css
@@ -33,6 +33,10 @@
 	overflow: hidden;
 	width: 100%;
 	float: left;
+	border-top: 1px #aaa solid;
+	border-bottom: 1px #aaa solid;
+	margin-bottom: 1em;
+	padding: 1em 0;
 }
 
 #kioskTestTitle {
